@@ -959,6 +959,6 @@ started these clone on 12th of July, 2019
 [uuk]: rewritten how icons for hearts, hunger and armor are cropped & drawn
 [uuk]: fixed issue 141
 [uuk]: improved registry warning messages
-[uuk]: fixed issue 9, 152
+[uuk]: fixed issue 9, 152, 153
 [uuk]: improved command syntax error message
 
